Version 4.0.0 - 2016-05-03
* Correctly read bank accounts from company

Version 3.4.0 - 2014-11-03
* Add Accoun Bank, Party and Bank Account fields of Payment Type as not
  editable if there is documents that use the type

Version 3.2 - 2014-05-22

Version 3.0 - 2013-10-25
* Initial release