@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part account_bank module for Tryton.
-The COPYRIGHT file at the top level of this repository contains the full
-copyright notices and license terms. -->
-<data>
-    <xpath expr="/form/notebook/page/field[@name='payment_type']"
-            position="after">
-        <label name="bank_account"/>
-        <field name="bank_account"/>
-    </xpath>
-</data>
